--- a/public/nodemmo.css
+++ b/public/nodemmo.css
@@ -1,9 +1,47 @@
 * {
-    font-family: "Open Sans", sans-serif;
+    font-family: 'Raleway', sans-serif;
+}
+html {
+    overflow: scroll;
+    overflow-x: hidden;
+}
+::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+}
+/* optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+    background: #FF0000;
+}
+form{
+  width: 300px;
+  margin: auto;
+}
+input{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    padding: 1rem 0;
+    text-align: center;
+    display: block;
+    margin: auto;
+    width: 300px;
+    overflow: visible;
+    border: none;
+    outline: none;
+    font-family: inherit;
+    font-size: 100%;
+}
+
+a{
+  color: #67E6A5;
 }
 
 #logo img {
-    width: 300px;
+    padding-top: 25px;
+    width: 450px;
+    display: block;
+    margin: auto;
+    background-color: #fff;
 }
 
 .logoSm img {
@@ -11,7 +49,24 @@
 }
 
 body {
-    background-color: #EEE8D5;
+    color: #4f4f4f;
+    background: #fff;
+    margin: 0px;
+}
+.main-title{
+  font-weight: 700;
+  text-transform: uppercase;
+  margin: 0 0 15px 0;
+}
+
+.main-text {
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 24px;
+}
+
+.input{
+
 }
 
 #game {
@@ -21,20 +76,33 @@ body {
     left: 0;
     right: 0;
 }
+#noAccount, #forgotPwd{
+  color: #fff;
+  padding: .25rem;
+}
+#playerCount{
+  text-align: center;
+}
+
+#loadPageForms{
+width: 100%;
+margin: 40px auto 25px auto
+}
 
 #messages {
   list-style: none;
   height: 93%;
   margin: 0;
   overflow-y: scroll;
-  padding: 10px 20px 10px 20px;
+  padding: 9px 15px 9px 15px;
 }
 
 #loadPageOptions {
     z-index: 3;
-    border: 2px solid #93A1A1;
-    background-color: #93A1A1;
-    height: 400px;
+    background-image: url(https://zenzo.io/wp-content/uploads/2018/08/1920-x-1080-bg-02.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    height: auto;
     position: absolute;
     left: 0;
     right: 0;
@@ -44,19 +112,46 @@ body {
 }
 
 #loadPageOptions button {
-    background-color: #FFFFFF;
-    border: 2px solid #FFFFFF;
-    width: 120px;
-    height: 45px;
-    margin: 10px;
+    width: 300px;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: .075rem;
+    background-color: #00d3d5;
+    outline: none;
+    font-weight: 600;
+    white-space: nowrap;
+    text-decoration: none;
+    font-size: 14px;
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid #00d3d5;
+    white-space: nowrap;
+    padding: 1rem 0;
+    line-height: 1.42857143;
+    border-radius: 0px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 #loadPageOptions button:hover {
     cursor: pointer;
 }
-
+#registerForm{
+  width: 300px;
+  margin: auto;
+}
 #registerForm button {
-    margin: 20px;
+}
+
+#register{
+  cursor: pointer;
 }
 
 #changePwd:hover {
@@ -68,7 +163,7 @@ body {
     border: 2px solid #FFFFFF;
     width: 120px;
     height: 45px;
-    margin: 10px;
+    margin: 9px;
 }
 
 #changePwd button:hover {
@@ -76,7 +171,7 @@ body {
 }
 
 #forgotPwd:hover {
-    text-decoration: underline;;
+    text-decoration: none;
     cursor: pointer;
 }
 
@@ -111,4 +206,176 @@ body {
   font-size: 70%;
   margin: 5px;
   text-align: center;
+}
+
+.fade-in {
+    animation: animationFrames ease 1s;
+    animation-iteration-count: 1;
+    transform-origin: 50% 50%;
+    animation-fill-mode: forwards;
+
+    /*when the spec is finished*/
+    -webkit-animation: animationFrames ease 1s;
+    -webkit-animation-iteration-count: 1;
+    -webkit-transform-origin: 50% 50%;
+    -webkit-animation-fill-mode: forwards;
+
+    /*Chrome 16+, Safari 4+*/
+    -moz-animation: animationFrames ease 1s;
+    -moz-animation-iteration-count: 1;
+    -moz-transform-origin: 50% 50%;
+    -moz-animation-fill-mode: forwards;
+
+    /*FF 5+*/
+    -o-animation: animationFrames ease 1s;
+    -o-animation-iteration-count: 1;
+    -o-transform-origin: 50% 50%;
+    -o-animation-fill-mode: forwards;
+
+    /*Not implemented yet*/
+    -ms-animation: animationFrames ease 1s;
+    -ms-animation-iteration-count: 1;
+    -ms-transform-origin: 50% 50%;
+    -ms-animation-fill-mode: forwards;
+
+    /*IE 10+*/
+}
+
+@keyframes animationFrames{
+    0% {
+        opacity: 0;
+        transform: translate(0px,-25px)  ;
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0px,0px)  ;
+    }
+}
+
+@-moz-keyframes animationFrames{
+    0% {
+        opacity: 0;
+        -moz-transform: translate(0px,-25px)  ;
+    }
+
+    100% {
+        opacity: 1;
+        -moz-transform: translate(0px,0px)  ;
+    }
+}
+
+@-webkit-keyframes animationFrames {
+    0% {
+        opacity: 0;
+        -webkit-transform: translate(0px,-25px)  ;
+    }
+
+    100% {
+        opacity: 1;
+        -webkit-transform: translate(0px,0px)  ;
+    }
+}
+
+@-o-keyframes animationFrames {
+    0% {
+        opacity: 0;
+        -o-transform: translate(0px,-25px)  ;
+    }
+
+    100% {
+        opacity: 1;
+        -o-transform: translate(0px,0px)  ;
+    }
+}
+
+@-ms-keyframes animationFrames {
+    0% {
+        opacity: 0;
+        -ms-transform: translate(0px,-25px)  ;
+    }
+
+    100% {
+        opacity: 1;
+        -ms-transform: translate(0px,0px)  ;
+    }
+}
+
+input {
+  font-family: inherit;
+  font-size: 100%;
+  margin: 0;
+}
+input {
+  overflow: visible;
+  border: none;
+  outline: none;
+}
+.db {
+  display: block;
+  margin: auto;
+  width: 300px
+}
+.input-reset {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+.input-reset::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
+.pv2 {
+  padding: 1rem 0;
+  text-align: center;
+}
+
+/* Change the white to any color ;) */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active  {
+    -webkit-box-shadow: 0 0 0 30px white inset;
+}
+
+/*Change text in autofill textbox*/
+input:-webkit-autofill {
+    -webkit-text-fill-color: #4f4f4f !important;
+}
+.reg-forgot{
+  padding-top: 20px;
+  font-weight: 600;
+  opacity: .85;
+}
+
+#registerPwd{
+  border-top: 2px solid #d1d1d1 !important;
+}
+
+#registerEmail{
+  border-top: 2px solid #d1d1d1 !important;
+  margin-bottom: 20px !important;
+}
+
+#closeRegister {
+  font-weight: 600;
+  opacity: .85;
+  cursor: pointer;
+  color: #fff;
+  padding: .25rem;
+}
+
+#submitRegister{
+  color: #67E6A5;
+  font-weight: 600;
+  cursor: pointer;
+  padding: .25rem;
+}
+
+#forgotPwdForm{
+  font-weight: 600;
+  opacity: .85;
+  cursor: pointer;
+  color: #fff;
+  padding: .25rem;
+
 }
