--- a/app/views/home/index.ejs
+++ b/app/views/home/index.ejs
@@ -1,7 +1,7 @@
 <h2 id="connectionCount"></h2>
   <h2 class="main-title" id="playerCount">Players online: </h2>
   <!-- <div id="userInfo"></div> -->
-
+    <a href="/logout">Logout</a>
   <div id="game">
     <div id="loadPageOptions">
       <!-- <div class="logoSm"><img src="logoSm.png"></div> -->
@@ -22,20 +22,24 @@
   <script src="jquery-2.2.0.min.js"></script>
   <script src="socket.io/socket.io.js"></script>
   <script>
+      
+     
     socket = io();
-    var id = -1;
+    var id = "<%= id  %>";
     var admin = false;
-    var username;
+    var username = "<%= username  %>";
     var ip = "";
+
     var browser = "Unknown";
     var player;
   </script>
+    <script src="chat_handler.js"></script>
+    <script src="phaser.min.js"></script>
+    <script src="game_vars.js"></script>
+    <script src="game_defs.js"></script>
+  
+    <script src="game_handler.js"></script>
+    <script src="game_socket.js"></script>
   <script src="main_page.js"></script>
-  <script src="chat_handler.js"></script>
-  <script src="phaser.min.js"></script>
-  <script src="game_vars.js"></script>
-  <script src="game_defs.js"></script>
 
-  <script src="game_handler.js"></script>
-  <script src="game_socket.js"></script>
 
