--- a/app/views/home/index.ejs
+++ b/app/views/home/index.ejs
@@ -4,6 +4,9 @@
   <h2 class="main-title" id="playerCount">Players online: </h2>
   <!-- <div id="userInfo"></div> -->
     <a href="/logout">Logout</a>
+    <div id="map">
+
+    </div>
   <div id="game">
     <div >
       <!-- <div class="logoSm"><img src="logoSm.png"></div> -->
@@ -57,7 +60,13 @@
     <script src="game_defs.js"></script>
   
     <script src="game_handler.js"></script>
+    
+
     <script src="game_socket.js"></script>
+
+    <script src="map_vars.js"></script>
+    <script src="map_handler.js"></script>
+    <script src="map_socket.js"></script>
     <% include ../partials/footer %>
 
 
