--- a/public/nodemmo.css
+++ b/public/nodemmo.css
@@ -77,10 +77,7 @@ body {
     right: 0;
     margin: auto;
 }
-#noAccount, #forgotPwd{
-  color: #fff;
-  padding: 0 .25rem;
-}
+
 #playerCount{
   text-align: center;
 }
@@ -322,4 +319,8 @@ input:-webkit-autofill {
   }
   .hidden {
       display: none;
+  }
+
+  #map {
+      margin-left:50px;
   }
